# production-rag-assistant

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/app/: main.py
backend/app/api/: routes_chat.py  (+7 more)
backend/tests/: test_agent_api.py  test_agent_eval_datasets.py  test_agent_eval_runner.py  test_agent_schemas.py  test_chat_api.py  test_chat_sessions_api.py  test_ci_workflow.py  test_config.py  test_database_observability.py  test_db_models.py  test_deployment_runbook.py  test_documents_api.py  test_embeddings.py  test_eval_datasets.py  test_eval_runner.py  test_eval_trends.py  test_export_jobs_api.py  test_export_worker.py  test_generation.py  test_metrics.py  test_observability_templates.py  test_pipeline.py  test_pipeline_smoke.py  test_portfolio_presentation.py  test_production_compose.py  test_rate_limit.py  test_readme.py  test_reindex_embeddings.py  test_release_checklist.py  test_repositories.py  test_static_app.py  test_workspace_migrations.py  test_workspace_validation.py  test_workspaces_api.py
docs/: CONFIGURATION.md  DATABASE_OBSERVABILITY.md  DEPLOYMENT_RUNBOOK.md  EVAL_TRENDS.md  OBSERVABILITY.md  PORTFOLIO_PRESENTATION.md  PROJECT_HANDOFF.md  RELEASE_CHECKLIST.md  agentic_rag_extension.md
evals/: __init__.py  agent_loaders.py  agent_models.py  agent_run.py  agent_runner.py  inspect_datasets.py  loaders.py  models.py  run.py  trends.py
evals/datasets/: agent_support_triage.jsonl  rag_eval_questions.jsonl  refusal_questions.jsonl  security_questions.jsonl
(+28 files in other folders)
